2000-05-25  Stefan Monnier  <monnier@cs.yale.edu>

	* regex.c (at_begline_loc_p): Also recognize the \\(?:^ case
	of an anchor at the beginning of a shy-group.

2000-05-25  Gerd Moellmann  <gerd@gnu.org>

	* xdisp.c (handle_invisible_prop): Don't try to skip over
	invisible text if end of text is already reached.

2000-05-25  Dave Love  <fx@gnu.org>

	* xdisp.c (Fdump_glyph_matrix): Declare the arg.

	* coding.c (encode_eol): Add null statement after label.

2000-05-25  Eli Zaretskii  <eliz@is.elta.co.il>

	* w16select.c (Fw16_set_clipboard_data): Fix the change from
	2000-05-20.

2000-05-25  Kenichi Handa  <handa@etl.go.jp>

	* ccl.c (ccl_driver): Fix previous change.

2000-05-25  Kenichi Handa  <handa@etl.go.jp>

	* coding.c (run_pre_post_conversion_on_str): Set point to the
	beginning of buffer before calling coding->post_read_conversion.
	(decode_coding_string): Give correct args to
	run_pre_post_conversion_on_str.
	(encode_coding_string): Likewise.

	* ccl.c (ccl_driver) <CCL_ReadMultibyteChar2>
	<CCL_WriteMultibyteChar2>:  Handle charsets eight-bit-control and
	eight-bit-graphic correctly.

2000-05-24  Kenichi HANDA  <handa@etl.go.jp>

	* fileio.c (Finsert_file_contents): Even if a file is not found,
	execute codes for setting up coding system.  Call
	after-insert-file-functions unconditionally.

2000-05-24  Gerd Moellmann  <gerd@gnu.org>

	* callproc.c, emacs.c, sysdep.c (setpgrp): Don't define if USG and
	BSD_PGRPS are not defined.

2000-05-24  Kenichi Handa  <handa@etl.go.jp>

	* charset.c (update_charset_table): Accept nil in LONG_NAME and
	DESCRIPTION.
	(syms_of_charset): Avoid building same strings.

2000-05-23  Gerd Moellmann  <gerd@gnu.org>

	* lread.c (Fload): Add a comment about the meaning of
	Vuser_init_file being t.

	* puresize.h (BASE_PURESIZE): Increase to 675000.

	* s/gnu-linux.h (setpgrp): Don't define it here because this
	prevents compilation on GNU/Linux systems with glib 2.2.
